Wrap mtp-table components with containers … so that their width correctly fits the screen and scrolls if necessary

--- a/mtp_cashbook/assets-src/__old__/stylesheets/app.scss
+++ b/mtp_cashbook/assets-src/__old__/stylesheets/app.scss
@@ -27,16 +27,6 @@
 }
 
 // app-specific styles
-%table-container {
-  @include media($max-width: $desktop-breakpoint) {
-    overflow-x: scroll;
-
-    table {
-      min-width: 900px;
-    }
-  }
-}
-
 .mtp-inactive__form {
   .form-label {
     color: $grey-2;
